Fix [BUG] Line breaks in .srt subtitles are ignored and rendered as spaces Fixes #447

--- a/chrome/player/assets/fluidplayer/css/fluidplayer.css
+++ b/chrome/player/assets/fluidplayer/css/fluidplayer.css
@@ -291,6 +291,7 @@ body {
     border-radius: 4px;
     display: inline-block;
     user-select: text;
+    white-space: pre-line;
 }
 
 .subtitle-track-wrapper {
